--- a/MinimalPhone/app/src/main/res/values/strings.xml
+++ b/MinimalPhone/app/src/main/res/values/strings.xml
@@ -1,4 +1,19 @@
 <resources>
     <string name="app_name">MinimalPhone</string>
     <string name="accessibility_service_description">This service detects running apps to support MinimalPhone.</string>
+    <string name="blocked_apps">Blocked Apps</string>
+    <string name="focus_mode_off">Focus Mode: OFF</string>
+    <string name="start_focus_mode">Start Focus Mode</string>
+    <string name="stop_focus_mode">Stop Focus Mode</string>
+    <string name="manage_blocked_apps">Manage Blocked Apps</string>
+    <string name="app_setup">App Setup</string>
+    <string name="enable_permissions">Please enable the permissions below to continue.</string>
+    <string name="usage_access_not_granted">Usage Access: Not Granted</string>
+    <string name="open_usage_access_settings">Open Usage Access Settings</string>
+    <string name="overlay_permission_not_granted">Overlay Permission: Not Granted</string>
+    <string name="open_overlay_settings">Open Overlay Settings</string>
+    <string name="accessibility_service_disabled">Accessibility Service Disabled</string>
+    <string name="open_accessibility_settings">Open Accessibility Settings</string>
+    <string name="continue_button">Continue</string>
+    <string name="blocked_app_message">%1$s is Blocked</string>
 </resources>
